task-4-fluxcd/solution/base/whoami/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - name: http
      appProtocol: http
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
  selector: {} # kustomize!
