task-4-fluxcd/solution/base/whoami/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  rules:
    - host: "" # kustomize!
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  name: http
            path: /
            pathType: Prefix
